# python-package

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  pyproject.toml  readme.rst  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: CI.yml
docs/src/: 404.rst  conf.py
package/: __init__.py
requirements/: dev
src/package/: __init__.py
tests/: __init__.py
